lox-tests/tests/field/set_on_nil.stderr
ERROR: Only class instances have fields, not objects of type nil
 --> 1:1
  |
1 | nil.foo = "value"; // expect runtime error: Only instances have fields.
  | ^-----^
